Render Title during render